--- a/index.html
+++ b/index.html
@@ -122,11 +122,15 @@
             <div class="container">
                 <h2 class="section-work-title">Чем мы занимаемся</h2>
                 <ul class="work-list">
-                    <li class="work-list-title"><img src="./images/box1.jpg" alt="Написание кодов" width="370"></li>
+                    <li class="work-list-title"><img src="./images/box1.jpg" alt="Написание кодов" 
+                        width="370">
+                        <h4 class="work-text">Десктопные приложения</h4></li>
                     <li class="work-list-title"><img src="./images/box2.jpg" alt="Работа с мобильными приложениями"
-                            width="370"></li>
+                            width="370">
+                        <h4 class="work-text">Мобильные приложения</h4></li>
                     <li class="work-list-title"><img src="./images/box3.jpg" alt="Работа с графическими програмамми"
-                            width="370"></li>
+                            width="370">
+                        <h4 class="work-text">Дизайнерские решения</h4></li>
                 </ul>
             </div>
         </section>
