--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-                <button type="button" class="button primary">Заказать услугу</button>
+                <button data-modal-open type="button" class="button primary">Заказать услугу</button>
             </div>
         </section>
 
@@ -385,6 +385,21 @@
             </div>
         </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <a data-modal-close href class="link-close">
+                <svg class="icon" width="18" height="18">
+                    <use href="./images/sprite.svg#icon-modal-close"></use>
+                </svg>
+            </a>
+        </div>
+    
+    </div>
+
+
+    <script src="./js/modal.js"></script>
 </body>
 
+     
 </html>
