--- a/index.html
+++ b/index.html
@@ -388,13 +388,13 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <a data-modal-close href class="link-close">
+            <a data-modal-close href="" class="link-close">
                 <svg class="icon" width="18" height="18">
                     <use href="./images/sprite.svg#icon-modal-close"></use>
                 </svg>
             </a>
         </div>
-    
+
     </div>
 
 
