--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="site-nav">
                     <li class="site-nav-item"><a href="./index.html" class="site-nav-link current">Студия</a></li>
                     <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
-                    <li class="site-nav-item"><a href="" class="site-nav-link">Контакты</a></li>
+                    <li class="site-nav-item"><a href="#" class="site-nav-link">Контакты</a></li>
                 </ul>
             </nav>
 
@@ -354,28 +354,28 @@
             <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
             <ul class="footer-list">
                 <li class="footer-item">
-                    <a href="" class="footer-link">
+                    <a href="#" class="footer-link">
                         <svg class="footer-icon" width="20" height="20">
                             <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-item">
-                    <a href="" class="footer-link">
+                    <a href="#" class="footer-link">
                         <svg class="footer-icon" width="20" height="20">
                             <use href="./images/sprite.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-item">
-                    <a href="" class="footer-link">
+                    <a href="#" class="footer-link">
                         <svg class="footer-icon" width="20" height="20">
                             <use href="./images/sprite.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="footer-item">
-                    <a href="" class="footer-link">
+                    <a href="#" class="footer-link">
                         <svg class="footer-icon" width="20" height="20">
                             <use href="./images/sprite.svg#icon-linkedin"></use>
                         </svg>
@@ -388,7 +388,7 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <a data-modal-close href="" class="link-close">
+            <a data-modal-close href="#" class="link-close">
                 <svg class="icon" width="18" height="18">
                     <use href="./images/sprite.svg#icon-modal-close"></use>
                 </svg>
