--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
                 <ul class="work-list">
                     <li class="work-list-title"><img src="./images/box1.jpg" alt="Написание кодов" 
                         width="370">
-                        <h4 class="work-text">Десктопные приложения</h4></li>
+                        <p class="work-text">Десктопные приложения</p></li>
                     <li class="work-list-title"><img src="./images/box2.jpg" alt="Работа с мобильными приложениями"
                             width="370">
-                        <h4 class="work-text">Мобильные приложения</h4></li>
+                        <p class="work-text">Мобильные приложения</p></li>
                     <li class="work-list-title"><img src="./images/box3.jpg" alt="Работа с графическими програмамми"
                             width="370">
-                        <h4 class="work-text">Дизайнерские решения</h4></li>
+                        <p class="work-text">Дизайнерские решения</p></li>
                 </ul>
             </div>
         </section>
@@ -388,7 +388,7 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <a data-modal-close href="  " class="link-close">
+            <a data-modal-close href="#" class="link-close" onclick="return false">
                 <svg class="icon" width="18" height="18">
                     <use href="./images/sprite.svg#icon-modal-close"></use>
                 </svg>
@@ -396,6 +396,7 @@
         </div>
 
     </div>
+    
 
 
     <script src="./js/modal.js"></script>
